fix memory issue

--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -137,7 +137,7 @@
 						android:textStyle="bold"
 						android:fontFamily="sans-serif-condensed"
 						android:textColor="@color/white"
-						android:text="0.0"
+						android:text="--"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:id="@+id/acu"
