--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -23,6 +23,7 @@
 			app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
 			app:layout_scrollFlags="scroll|exitUntilCollapsed">
 			<RelativeLayout
+	android:id="@+id/rel"
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/detail_backdrop_height1">
 				<ImageView
@@ -72,14 +73,15 @@
 						app:layout_constraintRight_toRightOf="parent"
 						app:layout_constraintTop_toTopOf="@+id/imageView5" android:layout_marginEnd="8dp"
 						android:layout_marginRight="8dp" android:paddingTop="0dp"/>
+
 					<ImageView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						app:srcCompat="@drawable/ic_airport_shuttle_white_48dp"
 						android:id="@+id/imageView2"
+						android:layout_width="48dp"
+						android:layout_height="wrap_content"
 						app:layout_constraintLeft_toLeftOf="parent"
 						app:layout_constraintRight_toRightOf="parent"
-						app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"/>
+						app:layout_constraintTop_toTopOf="parent"
+						app:srcCompat="@drawable/ic_airport_shuttle_white_48dp" />
 
 					<TextView
 						android:text="0.0 KM/H"
@@ -207,6 +209,7 @@
 
 
 	<android.support.design.widget.FloatingActionButton
+
 		android:id="@+id/fab"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -214,6 +217,15 @@
 		android:clickable="true"
 		android:src="@drawable/ic_add_location_white_24dp"
 		android:layout_gravity="bottom|end"/>
+
+	<Button
+		android:id="@+id/btn_plot"
+		style="@style/Widget.AppCompat.Button.Colored"
+		android:text="@string/plot_manually"
+		android:src="@mipmap/ic_launcher"
+		android:layout_gravity="bottom|end"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content" />
 
 	<android.support.v4.view.ViewPager
 		android:id="@+id/viewpager"
