add dave as csv file

--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/coordinator"
     tools:context="com.yamamz.materialgpsapp.PlotActivity">
 
 
@@ -18,5 +19,13 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_undo_white_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_save_white_18dp" />
 
 </android.support.design.widget.CoordinatorLayout>
