--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -218,6 +218,16 @@
 		android:src="@drawable/ic_add_location_white_24dp"
 		android:layout_gravity="bottom|end"/>
 
+	<android.support.design.widget.FloatingActionButton
+
+		android:id="@+id/fab_refresh"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/fab_margin"
+		android:clickable="true"
+		android:src="@drawable/ic_refresh_white_24dp"
+		android:layout_gravity="bottom|start"/>
+
 	<Button
 		android:background="@drawable/ripple_background"
 		android:id="@+id/btn_plot"
