--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -44,6 +44,13 @@
             style="@style/MenuButtonsSmall.Green" />
 
         <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_poly_line_or_gon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_format_shapes_white_24dp"
+            fab:fab_label="Polygon is active"
+            style="@style/MenuButtonsSmall.Green" />
+        <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,6 +73,13 @@
             fab:fab_label="Track a location"
             style="@style/MenuButtonsSmall.Green" />
 
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_clearMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_delete_sweep_white_24dp"
+            fab:fab_label="Clear map objects"
+            style="@style/MenuButtonsSmall.Green" />
 
 
 
